== 1.3.0

* enhancements
  * All controllers can now handle different mime types than html using Responders (by github.com/sikachu)
  * Added reset_password_within as configuration option to send the token for recovery (by github.com/jdguyot)
  * Bump password length to 128 characters (by github.com/k33l0r)
  * Add :only as option to devise_for (by github.com/timoschilling)
  * Allow to override path after sending password instructions (by github.com/irohiroki)
  * require_no_authentication has its own flash message (by github.com/jackdempsey)

* bug fix
  * Fix a bug where configuration options were being included too late
  * Ensure Devise::TestHelpers can be used to tests Devise internal controllers (by github.com/jwilger)
  * valid_password? should not choke on empty passwords (by github.com/mikel)
  * Calling devise more than once does not include previously added modules anymore
  * downcase_keys before validation

* backward incompatible changes
  * authentication_keys are no longer considered when creating the e-mail validations, the previous behavior was buggy. You must double check if you were relying on such behavior.

== 1.2.1

* enhancements
  * Improve update path messages

== 1.2.0

* bug fix
  * Properly ignore path prefix on omniauthable
  * Faster uniqueness queries
  * Rename active? to active_for_authentication? to avoid conflicts

== 1.2.rc2

* enhancements
  * Make friendly_token 20 chars long
  * Use secure_compare

* bug fix
  * Fix an issue causing infinite redirects in production
  * rails g destroy works properly with devise generators (by github.com/andmej)
  * before_failure callbacks should work on test helpers (by github.com/twinge)
  * rememberable cookie now is httponly by default (by github.com/JamesFerguson)
  * Add missing confirmation_keys (by github.com/JohnPlummer)
  * Ensure after_* hooks are called on RegistrationsController